[package]
name = "unrealnet-real-world-poc"
version = "0.1.0"
edition = "2021"
authors = ["UnrealNet Team"]
description = "Real-world proof of concept for Dynamic Protocols Infra Physics Generator"

[dependencies]
unrealnet-core = { path = "../unrealnet-core" }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
